changed server url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "facerecognition",
+  "homepage": "https://luiavag.github.io/facerecognition",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,13 +9,18 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-particles-js": "^3.0.3",
+    "react-scripts": "3.4.1",
+    "react-tilt": "^0.1.4",
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
