--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "facerecognition",
-  "homepage": "https://luiavag.github.io/facerecognition",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,9 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
