--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "facerecognition",
+  "homepage": "https://react-facedetection.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
