--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facerecognition",
-  "homepage": "https://react-facedetection.herokuapp.com/",
+  "homepage": "https://luiavag.github.io/facerecognition",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,7 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
